--- a/pom.xml
+++ b/pom.xml
@@ -24,10 +24,14 @@
         <connection/>
         <developerConnection/>
         <tag/>
+
         <url/>
     </scm>
     <properties>
         <java.version>17</java.version>
+
+            <spring-ai.version>1.0.3</spring-ai.version>
+
     </properties>
 
 
@@ -84,10 +88,24 @@
             <scope>runtime</scope>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.ai</groupId>
+            <artifactId>spring-ai-starter-model-openai</artifactId>
+        </dependency>
 
 
     </dependencies>
-
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.ai</groupId>
+                <artifactId>spring-ai-bom</artifactId>
+                <version>${spring-ai.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
     <build>
         <plugins>
             <plugin>
