--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,8 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.servlet.multipart.max-file-size = 5MB
 spring.servlet.multipart.max-request-size = 5MB
+
+spring.ai.openai.api-key=API-Gemini
+spring.ai.openai.base-url=https://generativelanguage.googleapis.com/v1beta/openai
+spring.ai.openai.chat.completions-path=/chat/completions
+spring.ai.openai.chat.options.model=gemini-2.5-flash
