--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.servlet.multipart.max-file-size = 5MB
 spring.servlet.multipart.max-request-size = 5MB
 
-spring.ai.openai.api-key=AIzaSyDA7i2SOva1ClT2llOj6yWvomWR4o_ju4w
+spring.ai.openai.api-key=${GEMINI_API_KEY}
 spring.ai.openai.base-url=https://generativelanguage.googleapis.com/v1beta/openai
 spring.ai.openai.chat.completions-path=/chat/completions
 spring.ai.openai.chat.options.model=gemini-2.5-flash
