--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,14 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>
+                org.springframework.boot
+            </groupId>
+            <artifactId>
+                spring-boot-starter-validation
+            </artifactId>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
